# Astridr_Interfaces

./: README.md  pyproject.toml
astridr_interfaces/: __init__.py  channels.py  memory.py  providers.py
